# ProjectionMapAnything

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  devlog.md  pyproject.toml
.claude/skills/create-scope-plugin/: SKILL.md  reference.md
.claude/skills/create-scope-plugin/examples/: vfx-pack.md
.claude/skills/structured-light/: SKILL.md
ProCamCalibration/ProjectionMappingSample/: App.config
ProCamCalibration/ProjectionMappingSample/Properties/: Settings.Designer.cs  Settings.settings
ProCamCalibration/Shaders/: Shaders.vcxproj
projectionmapanything/: README.md  pyproject.toml
projectionmapanything/src/projectionmapanything/: __init__.py  calibration.py  dashboard.html  depth_provider.py  frame_server.py  isolation.py  pipeline.py  remap.py  schema.py
projector-client/: projector_client.py  pyproject.toml
promapanything-app/: pyproject.toml
promapanything-app/src/promapanything/: __init__.py  app.py  calibration.py  camera.py  depth.py  ndi_camera.py  procam_calibration.py  projector_depth.py  reproject.py  spout_output.py  state.py  ui.py
promapanything-app/src/promapanything/renderer/: scene.py
promapanything-app/src/promapanything/renderer/shaders/: effects.frag  frustum.vert  fullscreen.vert  mesh.vert  passthrough.frag  pointcloud.frag  pointcloud.vert
scope-promapanything-vj/: README.md  pyproject.toml
scope-promapanything-vj/src/scope_promapanything_vj/: __init__.py  calibration.py  depth_provider.py  effects.py  frame_server.py  pipeline.py  projector_output.py  remap.py  schema.py
src/projectionmapanything/: __init__.py  calibration.py  dashboard.html  depth_provider.py  frame_server.py  pipeline.py  remap.py  schema.py
tools/: kinect_exposure.py
