[project]
name = "promapanything"
version = "0.1.0"
description = "Standalone projection mapping calibration, 3D preview, and effects app with Spout output"
requires-python = ">=3.12"
dependencies = [
    "glfw",
    "moderngl",
    "imgui-bundle",
    "PyOpenGL",
    "opencv-python-headless",
    "numpy",
    "PyGLM",
    "SpoutGL",
    "torch",
    "torchvision",
    "timm",
]

[project.scripts]
promapanything = "promapanything.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promapanything"]
