[project]
name = "scope-promapanything-vj"
version = "0.2.2"
description = "Projection mapping depth preprocessor — calibrates projector-camera geometry and outputs re-projected depth maps for ControlNet conditioning"
requires-python = ">=3.12"
dependencies = ["opencv-python-headless", "transformers"]

[project.entry-points."scope"]
scope_promapanything_vj = "scope_promapanything_vj"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_promapanything_vj"]
